# xfads

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  config_env.sh  environment.yaml  environment.yml  pyproject.toml  set_pythonpath.sh  test.py
dev/: linalg_utils.py  plot_utils.py  prob_utils.py  utils.py
dev/smoothers/: dkf.py  dvbf.py  lightning_trainers.py  nonlinear_smoother.py  nonlinear_smoother_causal.py  nonlinear_smoother_diagonal.py  svae.py
dev/ssm_modules/: dynamics.py  encoders.py  likelihoods.py
examples/bouncing_ball/: config.yaml  inference_smoother_acausal.py  inference_smoother_causal.py  plot_smoother_acausal.py  plot_smoother_causal.py
examples/gauss_ring_example/: README.md  config.yaml  demo.ipynb  demo_regularizer.ipynb  eval.py  gauss_ring_data.pt  generate_data.py  inference_lightning.py
examples/lds_example/: config.yaml  inference_lightning.py
examples/lvm_progression/: config.yaml  demo.ipynb
examples/monkey_reaching/: config.yaml  download_data.py  inference_smoother_acausal.py  inference_smoother_causal.py  plot_hand_xy_regimes.py  plot_r2_movement_k_lag.py  plot_reaching_variable_start.py  post_train.py
examples/monkey_timing/: config.yaml  download_data.py  inference_smoother_acausal.py  post_train_psth.py
examples/pendulum/: config.yaml  inference_smoother_acausal.py  inference_smoother_causal.py  plot_smoother_acausal.py  plot_smoother_causal.py
examples/ring_attractor/: config.yaml  demo.ipynb  inference_lightning.py  plot_learned_model.py
examples/vdp_example/: config.yaml  eval.py  inference_lightning.py
workshop/monkey_reaching/: config.yaml  inference.ipynb
workshop/vanderpool/: eval.ipynb  inference.ipynb
workshop/vdp_example/: eval.ipynb  eval.py  vanderpool.ipynb
xfads/: decorators.py  environment.yaml  linalg_utils.py  plot_utils.py  prob_utils.py  utils.py
xfads/smoothers/: dkf.py  (+7 more)
(+18 files in other folders)
