[project]
name = "xfads"
version = "0.5.0"
description = "eXponential Family Dynamical Systems"
authors = []
dependencies = [
    "torch>=2.2.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "tqdm>=4.67.0",
    "scikit-learn>=1.5.2",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "hydra-core>=1.3.2",
    "einops>=0.8.0",
    "pyyaml>=6.0.2",
    "sympy>=1.13.3",
    "torchvision>=0.17.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["xfads"]
